--- a/jaxrs-versioning/pom.xml
+++ b/jaxrs-versioning/pom.xml
@@ -100,9 +100,21 @@
       <groupId>org.jboss.shrinkwrap.resolver</groupId>
       <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
       <version>2.0.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+	   <groupId>org.json</groupId>
+	   <artifactId>json</artifactId>
+	   <version>20160212</version>
+	   <scope>test</scope>
+    </dependency>
+    <dependency>
+	  <groupId>commons-io</groupId>
+	  <artifactId>commons-io</artifactId>
+	  <version>2.4</version>
+	  <scope>test</scope>
     </dependency>
   </dependencies>
-
   <profiles>
     <profile>
       <id>wildfly</id>
