--- a/jaxrs-versioning/pom.xml
+++ b/jaxrs-versioning/pom.xml
@@ -132,6 +132,9 @@
             <goals>
               <goal>prepare-agent</goal>
             </goals>
+            <configuration>
+              <propertyName>jacoco.agent</propertyName>
+            </configuration>
           </execution>
           <execution>
             <id>default-report</id>
@@ -202,6 +205,7 @@
             <version>2.17</version>
             <configuration>
               <!-- Fork every test because it will launch a separate AS instance -->
+              <argLine>${jacoco.agent}</argLine>
               <forkMode>always</forkMode>
               <systemPropertyVariables>
                 <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
