--- a/jaxrs-versioning/pom.xml
+++ b/jaxrs-versioning/pom.xml
@@ -121,6 +121,22 @@
     </dependency>
   </dependencies>
   <build>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>arquillian.xml</include>
+        </includes>
+      </testResource>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>false</filtering>
+        <excludes>
+          <exclude>arquillian.xml</exclude>
+        </excludes>
+      </testResource>
+    </testResources>
     <plugins>
       <plugin>
         <groupId>org.jacoco</groupId>
@@ -129,11 +145,13 @@
         <executions>
           <execution>
             <id>default-prepare-agent</id>
+            <phase>process-resources</phase>
             <goals>
               <goal>prepare-agent</goal>
             </goals>
             <configuration>
               <propertyName>jacoco.agent</propertyName>
+              <append>true</append>
             </configuration>
           </execution>
           <execution>
@@ -205,7 +223,6 @@
             <version>2.17</version>
             <configuration>
               <!-- Fork every test because it will launch a separate AS instance -->
-              <argLine>${jacoco.agent}</argLine>
               <forkMode>always</forkMode>
               <systemPropertyVariables>
                 <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
