--- a/jaxrs-versioning/pom.xml
+++ b/jaxrs-versioning/pom.xml
@@ -36,6 +36,7 @@
     <jboss.version>8.2.1.Final</jboss.version>
     <maven.compiler.target>1.7</maven.compiler.target>
     <maven.compiler.source>1.7</maven.compiler.source>
+    <argLine>${jacoco.agent}</argLine>
   </properties>
 
   <dependencyManagement>
@@ -145,7 +146,6 @@
         <executions>
           <execution>
             <id>default-prepare-agent</id>
-            <phase>process-resources</phase>
             <goals>
               <goal>prepare-agent</goal>
             </goals>
@@ -162,6 +162,14 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <argLine>${argLine}</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
