Added feature to specify version via custom media type parameter

--- a/jaxrs-versioning/pom.xml
+++ b/jaxrs-versioning/pom.xml
@@ -75,6 +75,7 @@
 	   <groupId>org.json</groupId>
 	   <artifactId>json</artifactId>
 	   <version>20160212</version>
+	   <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
