--- a/jaxrs-versioning/pom.xml
+++ b/jaxrs-versioning/pom.xml
@@ -247,11 +247,24 @@
     </profile>
     <profile>
       <id>tomee</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <excludes>
+                <exclude>de.openknowledge.jaxrs.versioning.AddressResourceTest</exclude>
+              </excludes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
       <dependencies>
         <dependency>
           <groupId>org.apache.tomee</groupId>
           <artifactId>arquillian-tomee-embedded</artifactId>
-          <version>7.0.0-M2</version>
+          <version>7.0.3</version>
           <scope>test</scope>
         </dependency>
         <dependency>
@@ -269,13 +282,13 @@
         <dependency>
           <groupId>org.apache.tomee</groupId>
           <artifactId>openejb-core</artifactId>
-          <version>7.0.0-M2</version>
+          <version>7.0.3</version>
           <scope>test</scope>
         </dependency>
         <dependency>
           <groupId>org.apache.tomee</groupId>
           <artifactId>tomee-embedded</artifactId>
-          <version>7.0.0-M2</version>
+          <version>7.0.3</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
