--- a/jaxrs-versioning/pom.xml
+++ b/jaxrs-versioning/pom.xml
@@ -254,6 +254,7 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <excludes>
+                <exclude>de.openknowledge.jaxrs.versioning.AddressResourceTest</exclude>
                 <exclude>de.openknowledge.jaxrs.versioning.AddressResourceWithNoTypeInformationTest</exclude>
               </excludes>
             </configuration>
@@ -302,6 +303,7 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <excludes>
+                <exclude>de.openknowledge.jaxrs.versioning.AddressResourceTest</exclude>
                 <exclude>de.openknowledge.jaxrs.versioning.AddressResourceWithNoTypeInformationTest</exclude>
                 <exclude>de.openknowledge.jaxrs.versioning.VersionedMediaTypeFeatureTest</exclude>
               </excludes>
