--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
 jdk:
-  - oraclejdk9
-# - openjdk9 # TODO openjdk9 is not available on Ubuntu 15.04, we have to pull 16.04 before build
+  - oraclejdk7
+  - openjdk7
 before_script: cd jaxrs-versioning
