--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ jdk:
   #- oraclejdk9 jacoco does not work
   #- openjdk9 not available for Trusty
 before_script: cd jaxrs-versioning
+script:
+  - mvn test -B
+  - mvn test -B -Ppayara
+  - mvn test -B -Ptomee
 cache:
     directories:
         - $HOME/.m2
