--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,11 @@ script: mvn test -B -P $CONTAINER
 cache:
     directories:
         - $HOME/.m2
+addons:
+  sonarcloud:
+    organization: "ok"
+jobs:
+  include:
+    - stage: sonarcloud
+      jdk: oraclejdk8
+      script: mvn sonar:sonar
