--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 language: java
 jdk:
-  #- openjdk7
+  - openjdk7
   #- oraclejdk8 moved to jobs section, see below
-  #- openjdk8
+  - openjdk8
   #- oraclejdk9 jacoco does not work
   #- openjdk9 not available for Trusty
-#env:
-#  - CONTAINER=wildfly
-#  - CONTAINER=payara
-#  - CONTAINER=tomee
+env:
+  - CONTAINER=wildfly
+  - CONTAINER=payara
+  - CONTAINER=tomee
 before_install: cd jaxrs-versioning
 install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -P $CONTAINER
-#script: mvn test -B -P $CONTAINER
+script: mvn test -B -P $CONTAINER
 cache:
     directories:
         - $HOME/.m2
@@ -24,11 +24,11 @@ jobs:
       env:
         - CONTAINER=wildfly
       script: mvn test -B -P $CONTAINER sonar:sonar
-#    - jdk: oraclejdk8
-#      env:
-#        - CONTAINER=payara
-#      script: mvn test -B -P $CONTAINER
-#    - jdk: oraclejdk8
-#      env:
-#        - CONTAINER=tomee
-#      script: mvn test -B -P $CONTAINER
+    - jdk: oraclejdk8
+      env:
+        - CONTAINER=payara
+      script: mvn test -B -P $CONTAINER
+    - jdk: oraclejdk8
+      env:
+        - CONTAINER=tomee
+      script: mvn test -B -P $CONTAINER
